--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -118,6 +118,10 @@ $sideNavLinksBlue: #045fab;
 $fontFamily: 'Helvetica Neue Light', Arial, sans-serif;
 $fontFamily2: 'Helvetica Neue Medium', Arial, sans-serif;
 
+//MesssageArea Colors
+$messageAreaBckgColor: $lightGray2;
+$messageLinkColor: $darkBlueGray;
+
 //Success Colors
 $successColor: $brightGreen;
 $successColor2: $medGreen;
@@ -170,6 +174,9 @@ $enterpriseBckImg: $imageDir + 'header-icon-enterprise.png';
 $peopleIconDefault: $imageDir + 'icon/people-default.png';
 $peopleIconHover: $imageDir + 'icon/people-hover.png';
 $peopleBckImg: $imageDir + 'header-icon-people.png';
+
+//Temp Labor imgs
+$laborCostChart: $imageDir + 'lineWithAreaChart.png';
 
 //Dialog
 $dialogTitleText: $white;
@@ -313,6 +320,12 @@ $oddEmpTableBckg: $lightGray2;
 $scheduleDayHeaderBckgColor: $lightGray1;
 $scheduleContentBckgColor: $lightGray2;
 $scheduleHighlightColor: $lightGray1;
+$reviewApprovalSectionBorderColor: $lightGray1;
+
+$preferredAreaBorderColor: $darkGray;
+$onCallAreaBorderColor: $darkGray;
+$notScheduledAreaBorderColor: $lightBlueGray;
+$notAvailableAreaBorderColor: $lightCrimson;
 
 //Footer Variables
 $footerBorderColor: $lightGrayOld4;
@@ -392,6 +405,76 @@ a.oj-navigationlist-item-content.oj-navigationlist-item-no-icon{
 .fa-chevron-down, .fa-chevron-up{
     font-size:14px;
 }
+
+//General Styles
+.messageArea{
+    min-height:50px;
+    padding: $basicPadding;
+    border-top: 10px solid $messageAreaBckgColor;
+    background-color: $messageAreaBckgColor;
+    .messageLabel{
+        font-weight:bold;
+
+        &:after{
+            content:'Note: ';
+            display:inline-block;
+            margin:0 0 0 3px;
+            font-family: $fontFamily2;
+        }
+    }
+    .messageLink{
+        cursor: pointer;
+        color: $messageLinkColor;
+        margin-top: $basicMargin/2;
+    }
+    .fa{
+        font-size:16px;
+    }
+}
+//Success Area
+.successArea{
+    border-color: $brightGreen;
+    .messageLabel{
+        color: $brightGreen;
+        &:after{
+            content:'Success: ';
+        }
+    }
+}
+
+//Warning Colors
+.warningArea{
+    border-color: $brightOrange;
+    .messageLabel{
+        color: $brightOrange;
+        &:after{
+            content:'Warning: ';
+        }
+    }
+}
+
+//Error Colors
+.errorArea{
+    border-color: $brightRed;
+    .messageLabel{
+        color: $brightRed;
+        &:after{
+            content:'Error: ';
+        }
+    }
+}
+
+//Information Colors
+.informationArea{
+    border-color: $brightBlue;
+    .messageLabel{
+        color: $brightBlue;
+        &:after{
+            content:'Note: ';
+        }
+    }
+}
+
 /*Page layouts*/
 //Top Off Canvas
 #topDrawer{
@@ -598,6 +681,7 @@ html:not([dir="rtl"]) .oj-dialog-title{
         display: inline-block;
     }
 }
+
 .appHeaderLogo {
     background-image: url($headerBGLogo);
     background-repeat: no-repeat;
@@ -1008,6 +1092,7 @@ label{
         @extend .dayHeader;
         text-align: left;
         font-weight:bold;
+        min-height:40px;
     }
     .daySections{
         //border:1px solid $daySectionsBorderColor;
@@ -1021,6 +1106,34 @@ label{
     .scheduleDaySections{
         @extend .daySections;
         min-height:55px;
+    }
+
+    //These will probably be changed to come from the json
+    .Bartender, .Server, .jobDayHeader .fa-star{
+        margin-top: 3px;
+        margin-right:3px;
+        display: inline-block;
+        font: normal normal normal 14px/1 FontAwesome;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+
+        .fa, &.fa{
+            font-size: 30px;
+            margin-top: 3px;
+        }
+    }
+    .Bartender{
+         &:before{
+            content: "\f000";
+            font-size: 30px;
+        }
+    }
+    .Server{
+         &:before{
+            content: "\f0f5";
+            font-size: 30px;
+        }
     }
     .locSections{
         text-align: center;
@@ -1036,32 +1149,8 @@ label{
             margin: 10px 0 0 0;
             padding: 5px 0;
             text-align: left;
-            .Bartender, .Server{
-                margin-top: 3px;
-                margin-right:3px;
-                display: inline-block;
-                font: normal normal normal 14px/1 FontAwesome;
-                text-rendering: auto;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-            }
-            .Bartender{
-                 &:before{
-                    content: "\f000";
-                    font-size: 30px;
-                }
-            }
-            .Server{
-                 &:before{
-                    content: "\f0f5";
-                    font-size: 30px;
-                }
-            }
-            .fa{
-                font-size: 30px;
-                margin-top: 3px;
-            }
         }
+
         .scheduleJobSection{
             margin:0;
             @extend .jobSection;
@@ -1128,6 +1217,29 @@ label{
 }
 
 //Labor Overview
+.tempLaborCostChart{
+    background-image:url($laborCostChart);
+    height: 353px;
+    width: 496px;
+    margin: 0 auto;
+}
+.preferredArea, .onCallArea, .notAvailableArea, .notScheduledArea{
+    border-top:10px solid;
+    padding: 5px 0;
+    text-align: left;
+}
+.preferredArea{
+    border-top-color:$preferredAreaBorderColor;
+}
+.onCallArea{
+    border-top-color:$onCallAreaBorderColor;
+}
+.notAvailableArea{
+    border-top-color:$notAvailableAreaBorderColor;
+}
+.notAvailableArea{
+    border-top-color:$notScheduledAreaBorderColor;
+}
 .daySummary{
     padding: $basicPadding;
     .dayTotalsLabel{
@@ -1144,13 +1256,14 @@ label{
     background-color: $scheduleContentBckgColor;
 }
 .scheduleEmpInfo{
-    margin: $basicMargin/2 0;
+    margin: $basicMargin 0;
 }
 .scheduleEmpImg{
     width:50px;
     height:50px;
     border-radius:50%;
-    padding-right:5px;
+    margin-right: $basicMargin/2;
+    border:1px solid $gray;
 }
 #laborTabSection {
     .oj-accordion-collapsible > .oj-collapsible-header{
@@ -1181,6 +1294,57 @@ label{
 
 .empName{
     color:$scheduleHighlightColor;
+}
+.reviewApprovalSection{
+    margin: $basicMargin 0;
+    display:flex;
+    display: -webkit-flex;
+    width:100%;
+    height:110px;
+    .reviewApprovalEmpInfo{
+        height:92px;
+        flex:4;
+        -webkit-flex:4;
+        padding:$basicPadding;
+        border:1px solid $reviewApprovalSectionBorderColor;
+        .empAddNotes{
+            font-weight:bold;
+            margin-top: $basicMargin;
+        }
+        .timeAdded{
+            text-transform: uppercase;
+        }
+    }
+    .reviewApprovalActions{
+        width:55px;
+
+        .reviewApprovalBtnsWrap{
+            display:flex;
+            display: -webkit-flex;
+            justify-content: flex-end;
+            -webkit-justify-content: flex-end;
+        }
+        .reviewApprovalBtns{
+            display:flex;
+            display: -webkit-flex;
+            flex-direction:column;
+            -webkit-flex-direction:column;
+        }
+        a{
+            width:55px;
+            height:55px;
+            display:block;
+            border-color: $reviewApprovalSectionBorderColor;
+            border-style:solid;
+            border-width: 1px 1px 1px 0;
+            background-color:transparent;
+            line-height: 55px;
+            text-align: center;
+            .fa{
+                font-size:20px;
+            }
+        }
+    }
 }
 //Media Query
 //Medium/ipad (UP)
